--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1"
-  }
+    },
+    "scripts": {
+      "build-css": "node-sass --include-path scss public/css/main.sass public/css/main.css",
+      "watch-css": "nodemon -e scss -x \"npm run build-css\""
+    }
 }
